Addupdate inventory
